objects/Enphase_Logger__c.object
<CustomObject>
    <label>Enphase Logger</label>
    <nameField>
        <label>Enphase Logger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enphase Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Type__c</fullName>
        <label>API Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Permit</fullName>
                </value>
                <value>
                    <fullName>SGIP</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Sunnova</fullName>
                </value>
                <value>
                    <fullName>Solar Optimum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <label>Operation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>UniqueIdentifier</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log_Eligible_for_Share__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Eligible for Share</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>